# sourceheaders

./: .gitlint  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .sourceheaders.toml  CHANGELOG.md  LICENSE  README.md  cliff.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
sourceheaders/: __init__.py  __main__.py  config.py  default.toml  languages.json  main.py  parser.py
sourceheaders/licenses/: AFL-1.2.txt  AFL-2.0.txt  AFL-2.1.txt  AFL-3.0.txt  AGPL-3.0-only.txt  AGPL-3.0-or-later.txt  AGPL-3.0.txt  BSD-2-Clause.txt  BitTorrent-1.0.txt  BitTorrent-1.1.txt  CUA-OPL-1.0.txt  ECL-1.0.txt  ECL-2.0.txt  GPL-1.0-only.txt  GPL-1.0-or-later.txt  GPL-2.0-or-later.txt  GPL-2.0.txt  GPL-3.0-or-later.txt  GPL-3.0.txt  Interbase-1.0.txt  LGPL-2.0+.txt  LGPL-2.0-only.txt  LGPL-2.1+.txt  LGPL-2.1.txt  LGPL-3.0.txt  LPPL-1.0.txt  LPPL-1.1.txt  LPPL-1.2.txt  LPPL-1.3a.txt  LPPL-1.3c.txt  MPL-1.0.txt  MPL-1.1.txt  MPL-2.0-no-copyleft-exception.txt  MulanPSL-1.0.txt  MulanPSL-2.0.txt  OCLC-2.0.txt  OSL-1.0.txt  OSL-1.1.txt  OSL-2.0.txt  OSL-2.1.txt  (+11 more)
tests/: __init__.py  test_detection.py  test_formatting.py  test_replacement.py
tools/: update_license_templates.py
