[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.bandit]
skips = ["B101"]

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "R0902,R0912"

[tool.pylint.format]
good-names = "i,j,fp"
max-line-length = "88"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "strict"
