[metadata]
name = sourceheaders
description = Adds or replaces header comments in source files.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jan Holthuis
author_email = holthuis.jan@googlemail.com
url = https://github.com/Holzhaus/sourceheaders
version = 0.0.2
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.10,
    Topic :: Software Development :: Pre-processors,
    Topic :: Software Development :: Quality Assurance,

[options]
packages =
    sourceheaders
install_requires =
    toml
python_requires = >=3.10
test_suite = tests

[options.package_data]
sourceheaders =
    *.toml
    licenses/*.txt

[options.entry_points]
console_scripts =
    sourceheaders = sourceheaders:main

[bdist_wheel]
universal = True
